--- a/index.html
+++ b/index.html
@@ -107,10 +107,10 @@
             <p class="foot_list">More ways to shop: Visit an <a href="">Apple Store</a>, call 1-800-MY-Apple, or <a href="">find a reseller</a></p>
         </div>
         <hr>
-        <div class="copy_box foot_list">Copyright &copy; 2016 Apple Inc. All rights reserved.</p>
+        <div class="copy_box foot_list">Copyright &copy; 2016 Apple Inc. All rights reserved.</div> 
+        <div class="flag foot_list"><img src="./images/usa.png"> United States</div>
         </div>
-        
-    </div>
+      </div>
   </footer>
 </body>
 </html>
