--- a/index.html
+++ b/index.html
@@ -10,21 +10,21 @@
 <body>
   <header>
     <!-- write your navigation bar here -->
-    <nav>
-        <div class="container"><img src="./images/navbar/apple-icon.png" alt="The Apple Icon"></div>
-        <div class="container"><img src="./images/navbar/mac.png"></div>
-        <div class="container"><img src="./images/navbar/ipad.png"></div>
-        <div class="container"><img src="./images/navbar/iphone.png"></div>
-        <div class="container"><img src="./images/navbar/watch.png"></div>
-        <div class="container"><img src="./images/navbar/tv.png"></div>
-        <div class="container"><img src="./images/navbar/music.png"></div>
-        <div class="container"><img src="./images/navbar/support.png"></div>
-        <div class="container"><img src="./images/navbar/search.png"></div>
-        <div class="container"><img src="./images/navbar/shop.png"></div>
+    <nav class="container">
+        <span class="nav-icon"><img src="./images/navbar/apple-icon.png" alt="The Apple Icon"></span>
+        <span class="nav-icon"><img src="./images/navbar/mac.png"></span>
+        <span class="nav-icon"><img src="./images/navbar/ipad.png"></span>
+        <span class="nav-icon"><img src="./images/navbar/iphone.png"></span>
+        <span class="nav-icon"><img src="./images/navbar/watch.png"></span>
+        <span class="nav-icon"><img src="./images/navbar/tv.png"></span>
+        <span class="nav-icon"><img src="./images/navbar/music.png"></span>
+        <span class="nav-icon"><img src="./images/navbar/support.png"></span>
+        <span class="nav-icon"><img src="./images/navbar/search.png"></span>
+        <span class="nav-icon"><img src="./images/navbar/shop.png"></span>
     </nav>
   </header>
   <div>
-    <header>iPhone 13 Pro</header>
+    <h1>iPhone 13 Pro</h1>
     <p class="dek_hed">Oh. So. Pro.</p>
     <p class="dek_hed"><a href="">Learn More > </a> <a href="">Buy > </a></p>
     <img class="hero" src="./images/hero_iphone_13pro.jpg">
@@ -39,7 +39,7 @@
   </div>
   <footer>
     <!-- write your footer here -->
-    <div>
+    <div class="container">
         <div class="footer_col">
             <h5>Shop and Learn</h5>
             <p class="foot_list">Mac</p>
